fixed problem with buttons on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,7 +88,6 @@ body {
 .start-shop-btn {
     background: #000;
     color: #f29100;
-    min-width: 260px;
 }
 
 .start-shop-btn:hover {
